--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:wickusadastra@gmail.com
+      #url: mailto:wickusadastra@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
