--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-minimal
+
+title: Hello, operator
+description: A system for billing and analytics of telecommunications service providers
+
+logo: /HOLogo.png
+show_downloads: true
