--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: Hello, operator
 description: A system for billing and analytics of telecommunications service providers
 
 logo: "/HOLogo.png"
-show_downloads: true
+show_downloads: false
